some fixes in API
